Fix findbugs errors (mbeanserver module, prasads).  Passed QL.
git-svn-id: https://svn.java.net/svn/glassfish~svn/trunk/main@55647 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5